# boost_otus_tutorial_9

./: .travis.yml  CMakeLists.txt  boostHomeWork.pro  version.h.in
src/: CMakeLists.txt  hint.cpp  main.cpp  newcontainer.h  somerandaccit.h
tests/: CMakeLists.txt  test1.cpp  test2.cpp
